Create Navigation Bar
- Used nav and ul tags
- Created two sets of ul tags for left and right aligned links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+
+        <title>Google</title>
 
     </head>
     <body>
-        
+        <nav>
+            <ul>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Store</li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Gmail</a>
+                    <a href="#">Images</a>
+                    <a href="#"><img src="images/googlegrid.png" alt=""></a>
+                    <button>Sign in</button>
+                </li>
+            </ul>
+        </nav>
     </body>
 </html>
