--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <script src="https://kit.fontawesome.com/8ac95242b2.js" crossorigin="anonymous"></script>
         <title>Google</title>
 
     </head>
@@ -22,5 +22,18 @@
                 </li>
             </ul>
         </nav>
+        <div class="main-content">
+            <div class="google-logo">
+                <img src="images/googlelogo.png" alt="Google Logo">
+            </div>
+            <form action=""></form>
+                <div class="search-form">
+                    <i class="fas fa-search"></i>
+                    <input class="search-field" type="text">
+                    <button>Google Search</button>
+                    <button>I'm Feeling Lucky</button>                    
+                </div>
+            </form>
+        </div>
     </body>
 </html>
