--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/reset.css">
         <script src="https://kit.fontawesome.com/8ac95242b2.js" crossorigin="anonymous"></script>
         <title>Google</title>
 
     </head>
     <body>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a href="#"></a>About</li>
                 <li><a href="#"></a>Store</li>
@@ -21,7 +23,7 @@
                     <button>Sign in</button>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
         <div class="main-content">
             <div class="google-logo">
                 <img src="images/googlelogo.png" alt="Google Logo">
@@ -30,8 +32,8 @@
                 <div class="search-form">
                     <i class="fas fa-search"></i>
                     <input class="search-field" type="text">
-                    <button>Google Search</button>
-                    <button>I'm Feeling Lucky</button>                    
+                    <button class="search-button">Google Search</button>
+                    <button class="search-button">I'm Feeling Lucky</button>                    
                 </div>
             </form>
         </div>
