--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <div class="google-logo">
                 <img src="images/googlelogo.png" alt="Google Logo">
             </div>
-            <form action=""></form>
-                <div class="search-form">
-                    <i class="fas fa-search"></i>
-                    <input class="search-field" type="text">
-                    <button class="search-button">Google Search</button>
-                    <button class="search-button">I'm Feeling Lucky</button>                    
-                </div>
-            </form>
+            <div class="search-form">
+                <i class="fas fa-search"></i>
+                <input class="search-field" type="text">
+            </div>
+            <div class="buttons-container">
+                <button class="search-button">Google Search</button>
+                <button class="search-button">I'm Feeling Lucky</button> 
+            </div>                      
         </div>
     </body>
 </html>
