--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <script src="https://kit.fontawesome.com/8ac95242b2.js" crossorigin="anonymous"></script>
         <title>Google</title>
+        <link rel="google-icon" sizes="120x120" href="images//apple-touch-icon.png">
 
     </head>
     <body>
