--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <input class="search-field" type="text">
             </div>
             <div class="buttons-container">
-                <button class="search-button">Google Search</button>
-                <button class="search-button">I'm Feeling Lucky</button> 
+                <button class="search-button" type="submit">Google Search</button>
+                <button class="search-button" type="submit">I'm Feeling Lucky</button> 
             </div>                      
         </div>
     </body>
