Style navigation bar
If applied, this commit styles a horizontal navigation bar with right and left aligned links.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,16 @@
 
     </head>
     <body>
-        <!-- <nav>
+        <nav class="navbar">
             <ul>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Store</li>
+                <li class="navlink nav-left"><a href="#">About</a></li>
+                <li class="navlink nav-left"><a href="#">Store</a></li>
+                <li class="navlink nav-right"><a href="#">Gmail</a></li>
+                <li class="navlink nav-right"><a href="#">Images</a></li>
+                <li class="navlink nav-right"><a href="#"><img src="images/googlegrid.svg" alt="Google Apps"></a></li>
+                <li class="navlink nav-right"><button>Sign in</button></li>
             </ul>
-            <ul>
-                <li>
-                    <a href="#">Gmail</a>
-                    <a href="#">Images</a>
-                    <a href="#"><img src="images/googlegrid.png" alt=""></a>
-                    <button>Sign in</button>
-                </li>
-            </ul>
-        </nav> -->
+        </nav>
         <div class="main-content">
             <div class="google-logo">
                 <img src="images/googlelogo.png" alt="Google Logo">
