--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
                 <button class="search-button" type="submit">Google Search</button>
                 <button class="search-button" type="submit">I'm Feeling Lucky</button> 
             </div>                      
-        </div>
+        </section>
     </body>
 </html>
