Adjust padding for apps grid icon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="navlink nav-left"><a href="#">About</a></li>
                 <li class="navlink nav-left"><a href="#">Store</a></li>
                 <li class="navlink nav-right"><button>Sign in</button></li>
-                <li class="navlink nav-right"><a href="#"><img src="images/googlegrid.svg" alt="Google Apps"></a></li>
+                <li class="navlink nav-right grid"><a href="#"><img src="images/googlegrid.svg" alt="Google Apps"></a></li>
                 <li class="navlink nav-right"><a href="#">Images</a></li>
                 <li class="navlink nav-right"><a href="#">Gmail</a></li>                
             </ul>
