Style sign-in button
If applied, this commit applies font, color and size properties to the sign-in button.
Custom padding-top is also applied to the parent list element.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>                
                 <li class="navlink nav-left"><a href="#">About</a></li>
                 <li class="navlink nav-left"><a href="#">Store</a></li>
-                <li class="navlink nav-right"><button>Sign in</button></li>
+                <li class="navlink nav-right button"><button>Sign in</button></li>
                 <li class="navlink nav-right grid"><a href="#"><i class="fas fa-th fa-lg"></i></a></li>
                 <li class="navlink nav-right"><a href="#">Images</a></li>
                 <li class="navlink nav-right"><a href="#">Gmail</a></li>                
