Apply styles for footer navigation bar
If applied, this commit styles the footer and its navigation links.

--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/reset.css">
-        <script src="https://kit.fontawesome.com/8ac95242b2.js" crossorigin="anonymous"></script>
-        <title>Google</title>
-        <link rel="google-icon" sizes="120x120" href="images//apple-touch-icon.png">
 
-    </head>
-    <body>
-        <nav class="navbar">
-            <ul>                
-                <li class="navlink nav-left"><a href="#">About</a></li>
-                <li class="navlink nav-left"><a href="#">Store</a></li>
-                <li class="navlink nav-right button"><button>Sign in</button></li>
-                <li class="navlink nav-right grid"><a href="#"><i class="fas fa-th fa-lg"></i></a></li>
-                <li class="navlink nav-right"><a href="#">Images</a></li>
-                <li class="navlink nav-right"><a href="#">Gmail</a></li>                
-            </ul>
-        </nav>
-        <div class="main-content">
-            <div class="google-logo">
-                <img src="images/googlelogo.png" alt="Google Logo">
-            </div>
-            <div class="search-form">
-                <i class="fas fa-search"></i>
-                <input class="search-field" type="text">
-            </div>
-            <div class="buttons-container">
-                <button class="search-button" type="submit">Google Search</button>
-                <button class="search-button" type="submit">I'm Feeling Lucky</button> 
-            </div>                      
-        </section>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <script src="https://kit.fontawesome.com/8ac95242b2.js" crossorigin="anonymous"></script>
+    <title>Google</title>
+    <link rel="google-icon" sizes="120x120" href="images//apple-touch-icon.png">
+
+</head>
+
+<body>
+    <nav class="navbar">
+        <ul>
+            <li class="navlink nav-left"><a href="#">About</a></li>
+            <li class="navlink nav-left"><a href="#">Store</a></li>
+            <li class="navlink nav-right button"><button>Sign in</button></li>
+            <li class="navlink nav-right grid"><a href="#"><i class="fas fa-th fa-lg"></i></a></li>
+            <li class="navlink nav-right"><a href="#">Images</a></li>
+            <li class="navlink nav-right"><a href="#">Gmail</a></li>
+        </ul>
+    </nav>
+    <div class="main-content">
+        <div class="google-logo">
+            <img src="images/googlelogo.png" alt="Google Logo">
+        </div>
+        <div class="search-form">
+            <i class="fas fa-search"></i>
+            <input class="search-field" type="text">
+        </div>
+        <div class="buttons-container">
+            <button class="search-button" type="submit">Google Search</button>
+            <button class="search-button" type="submit">I'm Feeling Lucky</button>
+        </div>
+    </div>
+    <div id="footer-nav">
+        <ul>
+            <li class="navlink nav-left"><a href="#">Advertising</a></li>
+            <li class="navlink nav-left"><a href="#">Business</a></li>
+            <li class="navlink nav-left"><a href="#">How Search works</a></li>
+            <li class="navlink nav-right"><a href="#">Settings</a></li>
+            <li class="navlink nav-right"><a href="#">Terms</a></li>
+            <li class="navlink nav-right"><a href="#">Privacy</a></li>
+        </ul>
+    </div>
+</body>
+
 </html>
