Add Google apps and mic icons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li class="navlink nav-left"><a href="#">About</a></li>
             <li class="navlink nav-left"><a href="#">Store</a></li>
             <li class="navlink nav-right button"><button>Sign in</button></li>
-            <li class="navlink nav-right grid"><a href="#"><i class="fas fa-th fa-lg"></i></a></li>
+            <li class="navlink nav-right grid"><a href="#"><img src="images/apps-icon.png" alt="Google Apps"></a></li>
             <li class="navlink nav-right"><a href="#">Images</a></li>
             <li class="navlink nav-right"><a href="#">Gmail</a></li>
         </ul>
@@ -30,6 +30,7 @@
         <div class="search-form">
             <i class="fas fa-search"></i>
             <input class="search-field" type="text">
+            <img src="images/google-mic.png" alt="Search by voice">
         </div>
         <div class="buttons-container">
             <button class="search-button" type="submit">Google Search</button>
