Style mic and add placeholder
If applied, this commit adds a placeholder to the search input field
and changes the cursor to point while hovering on the google mic icon.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="search-form">
             <i class="fas fa-search"></i>
-            <input class="search-field" type="text">
+            <input class="search-field" type="text" placeholder="Search Google or type a URL">
             <img src="images/google-mic.png" alt="Search by voice">
         </div>
         <div class="buttons-container">
